fix: fix DTO names and method names